argocd/vault/manifests/test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orgchart
  namespace: default
  labels:
    app: orgchart
spec:
   selector:
      matchLabels:
        app: orgchart
   replicas: 1
   template:
      metadata:
        annotations:
          vault.hashicorp.com/agent-inject: 'true'
          vault.hashicorp.com/role: 'internal-app'
          vault.hashicorp.com/agent-inject-secret-database-config.txt: 'secret/database/config'
          # vault.hashicorp.com/tls-secret: vault-trust-bundle
          # vault.hashicorp.com/ca-cert: /vault/tls/vault-certs.pem
        labels:
          app: orgchart
      spec:
        serviceAccountName: internal-app
        containers:
          - name: orgchart
            image: jweissig/app:0.0.1@sha256:54e7159831602dd8ffd8b81e1d4534c664a73e88f3f340df9c637fc16a5cf0b7
